# collection4

./: .gitignore  README  configure.ac  screenshot1.jxl  screenshot2.jxl
debian/: changelog  clean  control  install  links  rules  service  socket  tmpfiles
debian/nginx/: collection4.conf
share/: Makefile.am  collection.conf  collection.js
src/: Makefile.am  action_graph_def_json.c  action_instance_data_json.c  action_list_graphs_json.c  action_list_hosts_json.c  action_show_graph.c  action_show_graph_json.c  action_show_instance.c  graph.c  graph_list.c  graph_list.h  main.c  parser.y  utils_cgi.c
